--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
     "email": "leeway.zlw@alibaba-inc.com"
   },
   "license": "MIT",
+  "homepage": "https://github.com/Leeway213/ctrl.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Leeway213/ctrl.js"
+  },
   "devDependencies": {
     "@babel/core": "7.9.0",
     "@babel/plugin-proposal-class-properties": "7.8.3",
@@ -60,6 +65,7 @@
     "rollup": "2.3.3",
     "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-commonjs": "10.1.0",
+    "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-glslify": "^1.2.0",
     "rollup-plugin-livereload": "^1.3.0",
